include $(top_srcdir)/common.am
SUBDIRS = \
	  test_00 \
	  test_01 \
	  test_02 \
	  test_03 \
	  test_04 \
	  test_05 \
	  test_06 \
	  test_07 \
	  test_08 \
	  test_09 \
	  test_10 \
	  test_11 \
	  test_12 \
	  test_14 \
	  test_15 \
	  test_16 \
	  test_17 \
	  test_18 \
	  test_19 \
	  test_20
	  
TESTS_ENVIRONMENT = $(top_srcdir)/scripts_lgpl/linux/regression.sh 
TESTS = \
	  test_00/test_00 \
	  test_01/test_01 \
	  test_02/test_02 \
	  test_03/test_03 \
	  test_08/test_08 \
	  test_09/test_09 \
	  test_10/test_10 \
	  test_11/test_11 \
	  test_12/test_12 \
	  test_14/test_14 \
	  test_15/test_15 \
	  test_16/test_16 \
	  test_17/test_17 \
	  test_18/test_18 \
	  test_19/test_19 \
	  test_19/test_20

