#-------------------------------------------------------------------------------
#   Makefile for delwaq
#
#   arjen.markus@deltares.nl
#   21 august 2008
#-------------------------------------------------------------------------------

lib_LIBRARIES = timers.a

#-------------------------------------------------------------------------------
#Includes

#-------------------------------------------------------------------------------
#Sources
timers_a_SOURCES = \
       timers.f

#-------------------------------------------------------------------------------
# Libraries
