#-------------------------------------------------------------------------------
#   Makefile for delftflow
#
#   Irv.Elshoff@deltares.nl
#   Adri.Mourits@deltares.nl
#   Fedor.Baart@deltares.nl
#   11 jan 2007
#
#   Copyright (C) 2007, Deltares
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
lib_LIBRARIES = libtest_01.a

#-------------------------------------------------------------------------------
#Sources
libtest_01_a_SOURCES = \
         test_01.c

#-------------------------------------------------------------------------------
#Libraries

