#-------------------------------------------------------------------------------
#   Makefile for delftflow
#
#   Irv.Elshoff@deltares.nl
#   Adri.Mourits@deltares.nl
#   Fedor.Baart@deltares.nl
#   11 jan 2007
#
#   Copyright (C) 2007, Deltares
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
lib_LIBRARIES = libtest_03.a

#-------------------------------------------------------------------------------
#Sources
libtest_03_a_SOURCES = \
         chnull.f90 \
         inull.f90 \
         rnull.f90 \
         test_03.cpp \
         trisimtest.f90

#-------------------------------------------------------------------------------
#Libraries

