#-------------------------------------------------------------------------------
#
#   Jan.Mooiman@deltares.nl
#   24 Aug 2012
#
#   Copyright (C) 2012, Deltares
#-------------------------------------------------------------------------------
include $(top_srcdir)/common.am
bin_PROGRAMS = test_20

#-------------------------------------------------------------------------------

AM_CFLAGS += -DPTR8

#Includes

test_20_SOURCES = \
	main.c

test_20_LDADD = \
	$(FCLIBS)

